--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,50 @@
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.6rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #6D2080;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   height: 100px;
   box-shadow: 0 3px 5px 2px rgba(0, 0, 0, .2);
+}
+
+.header-voltar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid #6D2080;
+  box-sizing: border-box;
+  color: #6D2080;
+  text-decoration: none;
+  margin-right: 5%;
+  height: 36px;
+  width: 134px;
+}
+
+.logo-mova {
+  margin-left: 5%;
+  width: auto;
+  height: 80px;
+}
+
+.texto-voltar {
+  margin-top: 1px;
+  font-size: 1.8rem;
 }
