--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,7 @@
-html {
-  font-size: 62.5%;
-}
-
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1.6rem;
+  font-size: 12px;
+  font-family: 'Montserrat', 'Segoe UI', 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #6D2080;
@@ -15,27 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+/*header ----------------------------------------------------------------------------------------------*/
+.header { 
   height: 100px;
   box-shadow: 0 3px 5px 2px rgba(0, 0, 0, .2);
 }
 
-.header-voltar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  border: 1px solid #6D2080;
-  box-sizing: border-box;
+.header-voltar { 
+  border: 1px solid #6D2080;  
   color: #6D2080;
   text-decoration: none;
   margin-right: 5%;
   height: 36px;
   width: 134px;
+}
+
+.header-voltar:hover { 
+ color: #a573b3;
 }
 
 .logo-mova {
@@ -46,5 +38,46 @@ code {
 
 .texto-voltar {
   margin-top: 1px;
-  font-size: 1.8rem;
+  font-size: 16px;
 }
+
+/*Área de pesquisa ---------------------------------------------------------------------------------------*/
+
+.button-pesquisar {
+  color: white;
+  background-color: #6D2080;
+  border: none;
+  border-radius: 10px;
+}
+
+.dropdown {
+  font-size: 12px;
+  background-color: white!important;
+  color: #808080!important;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom-width: 2px;
+  border-radius: 0;
+  border-color: #D3D3D3!important;  
+  box-shadow: none!important;
+}
+
+.dropdownItem {
+  font-size: 12px;
+  font-weight: 700;
+  color: #a0a0a0;
+}
+
+.dropdownItem:hover {
+  background-color: white;
+  color: #02AE99;
+}
+
+.img-paises {
+  width: 350px;
+  height: auto;
+}
+
+/*Componente de carregamento*/
+
