--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,29 @@ code {
 .img-paises {
   width: 350px;
   height: auto;
+  box-shadow: 0 3px 5px 2px rgba(0, 0, 0, .4);
 }
 
-/*Componente de carregamento*/
+.img-paises-details {
+  width: 250px;
+  height: auto;
+  box-shadow: 0 3px 5px 2px rgba(0, 0, 0, .4);
+}
+
+.errorMessage {
+  font-weight: 700;
+  font-size: 14px;
+  opacity: .6;
+  color: #CB4D74;
+} 
+
+.textTitle {
+  font-size: 18px;
+  font-weight: 800;
+}
+
+.button-vizinhos {
+  border: none;
+  background-color: white;
+}
 
