--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,8 @@ code {
   color: #02AE99;
 }
 
+/*Exibição de países ----------------------------------------------------------------------------------------------*/
+
 .img-paises {
   width: 350px;
   height: auto;
@@ -86,12 +88,16 @@ code {
   box-shadow: 0 3px 5px 2px rgba(0, 0, 0, .4);
 }
 
+/*Tratamento de erros -------------------------------------------------------------------------------------------*/
+
 .errorMessage {
   font-weight: 700;
   font-size: 14px;
   opacity: .6;
   color: #CB4D74;
 } 
+
+/*Página de detalhes do país ------------------------------------------------------------------------------------*/
 
 .textTitle {
   font-size: 18px;
@@ -101,5 +107,25 @@ code {
 .button-vizinhos {
   border: none;
   background-color: white;
+  
 }
+
+/*Paginação -------------------------------------------------------------------------------*/
+.pagination button{
+  box-shadow: 0 2px 2px 2px rgba(0, 0, 0, .2);
+  padding: 10px;
+}
+
+.pagination button:focus {
+  background: #6D2080!important;
+  color: white!important;
+}
+
+
+
+
+
+
+
+
 
