--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   font-size: 12px;
+  box-sizing: border-box;
+  margin: 0rem; 
   font-family: 'Montserrat', 'Segoe UI', 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -21,9 +23,15 @@ code {
   border: 1px solid #6D2080;  
   color: #6D2080;
   text-decoration: none;
-  margin-right: 5%;
   height: 36px;
   width: 134px;
+}
+
+.header-voltar-mobile { 
+  color: #6D2080;
+  text-decoration: none;
+  height: 36px;
+  width: 10px;
 }
 
 .header-voltar:hover { 
@@ -57,7 +65,8 @@ code {
   border-top: none;
   border-left: none;
   border-right: none;
-  border-bottom-width: 2px;
+  border-bottom: none;
+  /*border-bottom-width: 2px;*/
   border-radius: 0;
   border-color: #D3D3D3!important;  
   box-shadow: none!important;
@@ -77,7 +86,7 @@ code {
 /*Exibição de países ----------------------------------------------------------------------------------------------*/
 
 .img-paises {
-  width: 350px;
+  width: 280px;
   height: auto;
   box-shadow: 0 3px 5px 2px rgba(0, 0, 0, .4);
 }
@@ -87,6 +96,7 @@ code {
   height: auto;
   box-shadow: 0 3px 5px 2px rgba(0, 0, 0, .4);
 }
+
 
 /*Tratamento de erros -------------------------------------------------------------------------------------------*/
 
@@ -115,6 +125,7 @@ code {
   box-shadow: 0 2px 2px 2px rgba(0, 0, 0, .2);
   padding: 10px;
 }
+
 
 .pagination button:focus {
   background: #6D2080!important;
