--- a/src/index.css
+++ b/src/index.css
@@ -28,11 +28,19 @@ code {
 }
 
 .header-voltar-mobile { 
+  border: none;
   color: #6D2080;
   text-decoration: none;
   height: 36px;
-  width: 10px;
+  width: 40px;
 }
+
+.header-voltar-mobile:hover { 
+  color: #6D2080;
+}
+
+
+
 
 .header-voltar:hover { 
  color: #a573b3;
